[package]
name = "solution"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
env_logger = "0.9.0"
futures = "0.3.21"
hex = "0.4.3"
hyper = "0.14.17"
lazy_static = "1.4.0"
libc = "0.2.118"
log = "0.4.14"
nix = "0.23.1"
pickledb = "0.4.1"
rand = "0.8.5"
reqwest = { version = "0.11.0", features = ["blocking", "json"] }
serde = "1.0.136"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
