[package]
name = "solution"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
bytes = "1.11.1"
chrono = "0.4.43"
crossbeam-channel = "0.5.15"
csv = "1.4.0"
dashmap = "6.1.0"
derive_more = "2.1.1"
env_logger = "0.11.9"
flume = "0.12.0"
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
hyper = "1.8.1"
indexmap = "2.13.0"
itertools = "0.14.0"
kanal = "0.1.1"
lazy_static = "1.5.0"
libc = "0.2.181"
log = "0.4.29"
nix = "0.31.1"
num-traits = "0.2.19"
once_cell = "1.21.3"
parking_lot = "0.12.5"
pickledb = "0.5.1"
proptest = "1.10.0"
rand = "0.10.0"
regex = "1.12.3"
ring = "0.17.14"
crabtime = "1.1.4"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
toml = "1.0.0"
url = "2.5.8"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
bincode = "3.0.0"
base64 = "0.22.1"
approx = "0.5.1"
async-channel = "2.5.0"
