[package]
name = "solution"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[[bin]]
name = "main"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
chrono = "0.4.43"
crossbeam-channel = "0.5.15"
csv = "1.4.0"
dashmap = "6.1.0"
flume = "0.11.1"
futures = "0.3.31"
futures-util = "0.3.31"
indexmap = "2.13.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
libc = "0.2.180"
num-traits = "0.2.19"
parking_lot = "0.12.5"
rand = "0.9.2"
regex = "1.12.3"
ring = "0.17.14"
crabtime = "1.1.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
toml = "1.0.1"
async-channel = "2.5.0"
